<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtNameR"
            android:hint="@string/nombre_login"
            android:inputType="text"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/edtEmailR"
            android:hint="@string/email_login"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/edtPasswordR"
            android:hint="@string/contraseña_login"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/edtPhoneR"
            android:hint="@string/phone_login"
            android:inputType="phone"
            android:digits="0123456789+"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</android.support.v7.widget.CardView>