<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:id="@+id/rootLayout"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <LinearLayout
            android:id="@+id/imgView_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deligo_logo"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="50sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conductor_logo"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgView_logo"
            android:layout_centerInParent="true"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="50dp"
            android:visibility="gone">


            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp">

                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_login"
                        android:inputType="textEmailAddress"
                        android:text="niki.cesar2@gmail.com"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp">

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contraseña_login"
                        android:inputType="textPassword"
                        android:text="1234567890"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/colorAccent"
                        android:textSize="20sp" />


                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingresar_boton_login"

                android:layout_below="@+id/linlay1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:textAllCaps="false"
                android:textSize="16sp" />

            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Colored"
                app:backgroundTint="@color/colorPrimaryDark"
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registro_boton_login"

                android:layout_below="@+id/btnSignIn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:textSize="16sp" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="gone">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnForgpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/transparent"
            android:text="@string/recuperar_contraseña_login"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent" />

    </RelativeLayout>


</RelativeLayout>